Center title in frame

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </head>
 
     <body>
-        <h1>Ignition</h1>
-        <h2>Table of contents</h2>
+        <center><h1>Ignition</h1></center><h2>Table of contents</h2>
         <ul> 
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#design">Design</a></li>
