Small PNG name change

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </ul>
 
         <h3 id="prototype">WireFrame</h3>
-            <img src="comments.png" alt="WireFrame">
+            <img src="Comments.png" alt="WireFrame">
         <h3 id="demo">Demo</h3>
             <p>Please enjoy a poorly generated demo video of the map functionality</p>
             <p>Android Studio screen grab is ... buggy to say the least, bear with it for a couple of seconds in the beginning </p>
